<resources>
    <string name="app_name">Pill Aider</string>
    <string name="guide_pill_list">List</string>
    <string name="guide_chart">Data</string>
    <string name="guide_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_enter">Enter</string>
    <string name="set_time_title">Time to meal</string>
    <string name="set_time_b">Breakfast :</string>
    <string name="set_time_l">Lunch :</string>
    <string name="set_time_d">Dinner :</string>
    <string name="set_time_hour">Hour</string>
    <string name="set_time_min">Min</string>
    <string name="set_time_null">Select</string>
    <string name="set_remind">Reminder settings</string>
    <string name="set_remind1">One pill remind</string>
    <string name="set_remind2">times</string>
    <string name="set_remind3">With interval of</string>
    <string name="set_remind4">minites</string>
    <string name="begin_title">Pill Aider</string>
    <string name="begin_enter">Enter</string>
    <string name="set_info">Developer Information</string>
    <string name="set_private">Privacy Policy</string>
    <string name="inf_developer">Developers</string>
    <string name="detail_info">919106840132 李洲诚  919106840420 阚东 919106840421 李广通（Leader） 919106840424 柳翰坤 919106840425 吕辉</string>
    <string name="button_Enter">Enter</string>
    <string name="protocal">Disclaimer</string>
    <string name="protocal_maintain">Because the prescription of narcotic drugs and emergency prescription may contain addictive drugs or the requirements for timeliness and professionalism are too high, the software refuses to handle them. According to the prescription management measures issued by the former Ministry of health and the State Administration of traditional Chinese medicine, the prescription picture recognition function of this software will not recognize the anesthetic prescriptions with light red background and the emergency prescriptions with light yellow background. Please understand. The software and its development team are not responsible for any medical problems caused by prescription identification, medication reminder and other functions. If you have any questions about prescription medication, please contact the medical staff at the first time. Prescription medication shall be subject to the guidance of medical staff.</string>
    <string name="button_protocal_QUIT">Quit</string>
    <string name="button_protocal_ACCEPT">Accept</string>
    <string name="pill_list">Pill list</string>
    <string name="add_pills_adder">Add recipe</string>
    <string name="change_pills_tittle">Change recipe</string>
    <string name="add_pill_reset">Reset</string>
    <string name="add_pills_confirm">Confirm</string>
    <string name="change_pills_quit">Quit</string>
    <string name="change_pills_Confirm">Confirm</string>
    <string name="tittle_name">Name</string>
    <string name="tittle_Usage">Usage</string>
    <string name="tittle_B_I_A_usage">Befor/with/after meal</string>
    <string name="tittle_remind_method">Remind method</string>
    <string name="chart_value_default">---</string>
    <string name="chart_button_refresh">Refresh</string>
    <string name="chart_line_label_total">total</string>
    <string name="chart_line_label_token">token</string>
    <string name="chart_unit">times</string>
    <string name="tittle_cautions">Cautions</string>
    <string name="reminder_type_to_input">type to input</string>
    <string name="reminder_type_to_input2">type to input</string>
    <string name="usage_each_day">each day</string>
    <string name="usage_times">times</string>
    <string name="usage_each_time">each time</string>
    <string name="toast_freset">Your input has been reseted</string>
    <string name="set_save">SAVE</string>
    <string name="developer_tittle">Develop infomation</string>
    <string name="developer_sdk">SDK version</string>
    <string name="developer_device">Device</string>
    <string name="developer_gradle">Gradle version</string>
    <string name="developer_developer">Developer</string>
    <string name="developer_people">Guangtong Li,Dong Kan,Zhoucheng Li,Hui Lv,Hankun Liu</string>
    <string name="Settings_tittle">Settings</string>
    <string name="chart_tittle">Health daily</string>
    <string name="eat_before_meal">before meal</string>
    <string name="eat_with_meal">with meal</string>
    <string name="eat_after_meal">after meal</string>
    <string name="remind_ring">ring</string>
    <string name="remind_vibrate">vibrate</string>
    <string name="remind_ring_and_vibrate">ring and vibrate</string>
    <string name="pill_type_piece">pieces</string>
    <string name="pill_type_grain">grain</string>
    <string name="pill_type_ml">ml</string>
    <string name="toast_quit_app">You can\'t use our app unless you agree</string>
    <string name="toast_input_fullfill">Please input complely</string>
    <string name="toast_insert_succeed">insert succeed</string>
    <string name="widget_every_day">Today</string>
    <string name="widget_times_left">times left</string>
    <string name="widget_take_medecine">Next notification is coming in</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="alarm_one_day">One day</string>
    <string name="alarm_time">times</string>
    <string name="notification_on">notifications has been turned on</string>
    <string name="notification_off">notifications has been turned off</string>
    <string name="quit_change">\'s change has been cancelled</string>
    <string name="toast_have_not_changed">The infomation has\'t been changed</string>
    <string name="toast_change_succeed">has been changed successfully</string>
    <string name="noti_title">Time to take medicine now.</string>
    <string name="alarm_each_time">each time</string>
    <string name="button_fail">Fail</string>
    <string name="Button_done">Done</string>
</resources>