<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings_Fragment">

        <Button
            android:id="@+id/button3"
            android:layout_width="141dp"
            android:layout_height="64dp"
            android:layout_marginTop="64dp"
            android:text="@string/set_info"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_view2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="141dp"
            android:layout_height="64dp"
            android:text="@string/set_private"
            app:layout_constraintBottom_toBottomOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0" />

        <View

            android:id="@+id/set_view1"
            android:layout_width="333dp"
            android:layout_height="232dp"
            android:background="@drawable/set_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.122" />

        <TextView
            android:id="@+id/set_hour6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/set_time_min"
            app:layout_constraintBottom_toBottomOf="@+id/dmin"
            app:layout_constraintStart_toEndOf="@+id/dmin"
            app:layout_constraintTop_toTopOf="@+id/dmin"
            app:layout_constraintVertical_bias="0.62" />

        <EditText
            android:id="@+id/dmin"
            android:layout_width="48dp"
            android:layout_height="51dp"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/set_hour5"
            app:layout_constraintStart_toEndOf="@+id/set_hour5"
            app:layout_constraintTop_toTopOf="@+id/set_hour5"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/set_hour5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/set_time_hour"
            app:layout_constraintBottom_toBottomOf="@+id/dhour"
            app:layout_constraintStart_toEndOf="@+id/dhour"
            app:layout_constraintTop_toTopOf="@+id/dhour"
            app:layout_constraintVertical_bias="0.586" />

        <TextView
            android:id="@+id/set_hour4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/set_time_min"
            app:layout_constraintBottom_toBottomOf="@+id/lmin"
            app:layout_constraintStart_toEndOf="@+id/lmin"
            app:layout_constraintTop_toTopOf="@+id/lmin"
            app:layout_constraintVertical_bias="0.689"
            tools:text="@string/set_time_min" />

        <EditText
            android:id="@+id/lmin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/set_hour3"
            app:layout_constraintStart_toEndOf="@+id/set_hour3"
            app:layout_constraintTop_toTopOf="@+id/set_hour3"
            app:layout_constraintVertical_bias="0.724" />

        <TextView
            android:id="@+id/set_hour3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/set_time_hour"
            app:layout_constraintBottom_toBottomOf="@+id/lhour"
            app:layout_constraintStart_toEndOf="@+id/lhour"
            app:layout_constraintTop_toTopOf="@+id/lhour"
            app:layout_constraintVertical_bias="0.724" />

        <TextView
            android:id="@+id/set_hour2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/set_time_min"
            app:layout_constraintBottom_toBottomOf="@+id/bmin"
            app:layout_constraintStart_toEndOf="@+id/bmin"
            app:layout_constraintTop_toTopOf="@+id/bmin"
            app:layout_constraintVertical_bias="0.758" />

        <EditText
            android:id="@+id/bmin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/set_hour"
            app:layout_constraintStart_toEndOf="@+id/set_hour"
            app:layout_constraintTop_toTopOf="@+id/set_hour"
            app:layout_constraintVertical_bias="0.758" />

        <EditText
            android:id="@+id/dhour"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/set_time_d"
            app:layout_constraintStart_toEndOf="@+id/set_time_d"
            app:layout_constraintTop_toTopOf="@+id/set_time_d"
            app:layout_constraintVertical_bias="0.714" />

        <EditText
            android:id="@+id/lhour"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/set_time_l"
            app:layout_constraintStart_toEndOf="@+id/set_time_l"
            app:layout_constraintTop_toTopOf="@+id/set_time_l"
            app:layout_constraintVertical_bias="0.809" />

        <TextView
            android:id="@+id/set_time_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/set_time_title"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/set_view1"
            app:layout_constraintTop_toTopOf="@+id/set_view1" />

        <TextView
            android:id="@+id/set_time_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:text="@string/set_time_b"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/set_view1"
            app:layout_constraintTop_toTopOf="@+id/set_view1" />

        <TextView
            android:id="@+id/set_time_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/set_time_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/set_time_b"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/set_time_b"
            app:layout_constraintTop_toBottomOf="@+id/set_time_b" />

        <TextView
            android:id="@+id/set_time_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/set_time_d"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/set_time_l"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/set_time_l"
            app:layout_constraintTop_toBottomOf="@+id/set_time_l" />

        <EditText
            android:id="@+id/bhour"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/set_time_b"
            app:layout_constraintStart_toEndOf="@+id/set_time_b"
            app:layout_constraintTop_toTopOf="@+id/set_time_b"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/set_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/set_time_hour"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/bhour"
            app:layout_constraintStart_toEndOf="@+id/bhour"
            app:layout_constraintTop_toTopOf="@+id/bhour"
            app:layout_constraintVertical_bias="0.758" />

        <View
            android:background="@drawable/set_border"
            android:id="@+id/set_view2"
            android:layout_width="330dp"
            android:layout_height="166dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="@+id/set_view1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/set_view1"
            app:layout_constraintTop_toBottomOf="@+id/set_view1" />

        <EditText
            android:id="@+id/dhour4"
            android:layout_width="53dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.482" />

        <EditText
            android:id="@+id/dhour2"
            android:layout_width="53dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/set_time_null"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.655" />

        <TextView
            android:id="@+id/set_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_remind"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/set_view2"
            app:layout_constraintTop_toTopOf="@+id/set_view2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:text="@string/set_remind1"
            app:layout_constraintStart_toStartOf="@+id/set_view2"
            app:layout_constraintTop_toTopOf="@+id/set_view2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/set_remind2"
            app:layout_constraintBottom_toBottomOf="@+id/dhour2"
            app:layout_constraintStart_toEndOf="@+id/dhour2"
            app:layout_constraintTop_toTopOf="@+id/dhour2"
            app:layout_constraintVertical_bias="0.655" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="124dp"
            android:text="@string/set_remind3"
            app:layout_constraintStart_toStartOf="@+id/set_view2"
            app:layout_constraintTop_toTopOf="@+id/set_view2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/set_remind4"
            app:layout_constraintBottom_toBottomOf="@+id/dhour4"
            app:layout_constraintStart_toEndOf="@+id/dhour4"
            app:layout_constraintTop_toTopOf="@+id/dhour4"
            app:layout_constraintVertical_bias="0.448" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>